--- a/packages/docs/src/styles/tokens-grid.css
+++ b/packages/docs/src/styles/tokens-grid.css
@@ -15,6 +15,16 @@
     color: #ccc;
 }
 
+.tokens-grid tbody td:first-child {
+    border-top-left-radius: 8px;
+    border-bottom-left-radius: 8px;
+}
+
+.tokens-grid tbody td:last-child {
+    border-top-right-radius: 8px;
+    border-bottom-right-radius: 8px;
+}
+
 .tokens-grid tbody tr:nth-child(even) td {
     background: #444;
 }
